# ocomment

./: .gitignore  README.md  dune-project  ocomment.opam
.github/workflows/: ci.yml
ci/: Dockerfile.ci
lib/: app.ml  app.mli  core.ml  core.mli  dune  fs.ml  fs.mli  ocomment.ml  ocomment.mli
test/: app_test.ml  core_test.ml  dune  ocomment_test.ml
test-bin/: dune  help.t
test-bin/check-only.t/: ocomment-settings  run.t
test-bin/check-only.t/src/: Example.kt
test-bin/check-promote.t/: run.t
test-bin/check-promote.t/src/: Example.kt  NoProblem.kt
test-bin/check.t/: ocomment-settings  run.t
test-bin/check.t/src/: Example.java
test-lib/: app_test.ml  core_test.ml  dune
test/resources/: .ocomment
